fix scrollbar + other css

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,6 +2,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  width: calc(100vw - 68px);
+  padding-left: 34px;
 }
 
 a {
@@ -38,7 +40,7 @@ input[type="button"].button-primary {
 }
 
 .main {
-  margin-top: 1em;
+  margin-top: 2em;
   margin-bottom: 4em;
 }
 
